AC_INIT([LibMary], [0.1])

PKG_CHECK_MODULES(THIS, [glib-2.0 >= 2.0, gthread-2.0 >= 2.0, gmodule-2.0 >= 2.0])
AC_SUBST(THIS_CFLAGS)
AC_SUBST(THIS_LIBS)

AM_INIT_AUTOMAKE([1.7 gnu nostdinc])

AC_PROG_CC
AC_PROG_CXX
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL

case "$host" in
  *-*-mingw*|*-*-cygwin*)
    platform_win32=yes
    ;;
  *)
    platform_win32=no
    ;;
esac
AM_CONDITIONAL(PLATFORM_WIN32, test x$platform_win32 = xyes)

AC_ARG_ENABLE([mt-safe],
	      AC_HELP_STRING([--disable-mt-safe],
			     [Disable MT-safety]),
	      [enable_mt_safe=$enable_mt_safe],
	      [enable_mt_safe="yes"])
AM_CONDITIONAL([LIBMARY_MT_SAFE], test "x$enable_mt_safe" = "xyes")
if test "x$enable_mt_safe" = "xyes"; then
    AC_DEFINE([LIBMARY_MT_SAFE], [1], [ ])
    LIBMARY_GTHREAD_DEP="gthread-2.0"
fi
AC_SUBST(LIBMARY_GTHREAD_DEP)

AC_ARG_ENABLE([epoll],
	      AC_HELP_STRING([--disable-epoll],
			     [Disable epoll]),
	      [enable_epoll=$enableval],
	      [enable_epoll="yes"])
AM_CONDITIONAL(LIBMARY_ENABLE_EPOLL, test "x$enable_epoll" = "xyes")
if test "x$enable_epoll" = "xyes"; then
    AC_DEFINE([LIBMARY_ENABLE_EPOLL], [1], [ ])
fi

AC_ARG_WITH([select],
	    AC_HELP_STRING([--with-select=@<:@yes/no@:>@],
			   [Use select() syscall for event polling by default [default=no]]),
	    [with_select=$withval],
	    [with_select="no"])
if test "x$with_select" = "xyes"; then
    AC_DEFINE([LIBMARY_USE_SELECT], [1], [ ])
fi

AC_ARG_WITH([poll],
	    AC_HELP_STRING([--with-poll=@<:@yes/no@:>@],
			   [Use poll() syscall for event polling by default [default=no]]),
	    [with_poll=$withval],
	    [with_poll="no"])
if test "x$with_poll" = "xyes"; then
    AC_DEFINE([LIBMARY_USE_POLL], [1], [ ])
fi

AC_ARG_ENABLE([mwritev],
	      AC_HELP_STRING([--enable-mwritev],
			     [Enable mwritev]),
	      [enable_mwritev=$enableval],
	      [enable_mwritev="no"])
AM_CONDITIONAL(LIBMARY_ENABLE_MWRITEV, test "x$enable_mwritev" = "xyes")
if test "x$enable_mwritev" = "xyes"; then
    AC_DEFINE([LIBMARY_ENABLE_MWRITEV], [1], [ ])
fi

# local_config.h is for local configuration and should not be used in external
# headers. Every libmary source file (*.cpp, *.c) must include local_config.h
# This is acheived by specifying -include "local_config.h" compilation option
# in libmary/Makefile.am
#
# libmary_config.h is for external configuration and should be included
# by external headers when necessary.
#
AC_CONFIG_HEADERS([local_config.h libmary/libmary_config.h])

AC_CONFIG_FILES([Makefile
		 libmary/Makefile
		 libmary-1.0.pc])
AC_OUTPUT

